talos-cluster/flux/apps/zot/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: zot
    namespace: zot
spec:
    ingressClassName: tailscale
    rules:
        - http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: zot
                            port:
                                number: 5000
    tls:
        - hosts:
              - zot
